--- a/src/pages/user-center/user-center.html
+++ b/src/pages/user-center/user-center.html
@@ -14,5 +14,49 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item class="rgba2552553205">
+      <ion-avatar style="border:1px solid #fff;border-radius:50%" item-start>
+        <img [src]="'../../assets/'+myUser.avatar" alt="">
+      </ion-avatar>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6>
+            <h3>
+              {{myUser.user_name}}
+            </h3>
+          </ion-col>
+          <ion-col col-6>
+            <ion-icon name="card"></ion-icon>
+          </ion-col>
+          <ion-col col-12 style="font-size: 15px;">
+            {{myUser.phone}}
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item class="rgba2552553205">
+      <ion-grid>
+        <ion-row justify-content-center style="text-align: center;font-size: 15px;">
+          <ion-col col-4>
+            <div>0</div>
+            <div>收藏夹</div>
+          </ion-col>
+          <ion-col col-4>
+            <div>0</div>
+            <div>足迹</div>
+          </ion-col>
+          <ion-col col-4>
+            <div>0</div>
+            <div>红包卡券</div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item>
+      我的订单
+    </ion-item>
+  </ion-list>
 </ion-content>
