--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,15 +11,15 @@
 </ion-content>
 <ion-tabs>
   <ion-tab [tabTitle]="myindex.title" tabsHideOnSubPages=true tabIcon="home" [root]="myindex.root">
-
   </ion-tab>
+
+  <ion-tab [tabTitle]="myNotFound.title" tabIcon="list" [root]="myNotFound.root">
+  </ion-tab>
+
   <ion-tab [tabTitle]="mycart.title" tabIcon="cart" [root]="mycart.root">
 
   </ion-tab>
   <ion-tab [tabTitle]="myUserCenter.title" tabIcon="person" [root]="myUserCenter.root">
-
-  </ion-tab>
-  <ion-tab [tabTitle]="myNotFound.title" tabIcon="settings" [root]="myNotFound.root">
 
   </ion-tab>
 </ion-tabs>
