--- a/src/pages/user-center/user-center.html
+++ b/src/pages/user-center/user-center.html
@@ -14,49 +14,102 @@
 
 
 <ion-content padding>
-  <ion-list>
-    <ion-item class="rgba2552553205">
-      <ion-avatar style="border:1px solid #fff;border-radius:50%" item-start>
-        <img [src]="'../../assets/'+myUser.avatar" alt="">
-      </ion-avatar>
-      <ion-grid>
-        <ion-row>
-          <ion-col col-6>
-            <h3>
-              {{myUser.user_name}}
-            </h3>
-          </ion-col>
-          <ion-col col-6>
-            <ion-icon name="card"></ion-icon>
-          </ion-col>
-          <ion-col col-12 style="font-size: 15px;">
-            {{myUser.phone}}
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-    <ion-item class="rgba2552553205">
-      <ion-grid>
-        <ion-row justify-content-center style="text-align: center;font-size: 15px;">
-          <ion-col col-4>
-            <div>0</div>
-            <div>收藏夹</div>
-          </ion-col>
-          <ion-col col-4>
-            <div>0</div>
-            <div>足迹</div>
-          </ion-col>
-          <ion-col col-4>
-            <div>0</div>
-            <div>红包卡券</div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      我的订单
-    </ion-item>
-  </ion-list>
+  <ng-container *ngIf="myUser">
+
+    <ion-list>
+      <ion-item class="rgba2552553205">
+        <ion-avatar style="border:1px solid #fff;border-radius:50%" item-start>
+          <img [src]="'../../assets/'+avatar" alt="">
+        </ion-avatar>
+        <ion-grid>
+          <ion-row>
+            <ion-col col-6>
+              <h3>
+                {{user_name}}
+              </h3>
+            </ion-col>
+            <ion-col col-6>
+              <ion-icon name="card"></ion-icon>
+            </ion-col>
+            <ion-col col-12 style="font-size: 15px;">
+              {{phone}}
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item class="rgba2552553205">
+        <ion-grid>
+          <ion-row justify-content-center style="text-align: center;font-size: 15px;">
+            <ion-col col-4>
+              <div>0</div>
+              <div>收藏夹</div>
+            </ion-col>
+            <ion-col col-4>
+              <div>0</div>
+              <div>足迹</div>
+            </ion-col>
+            <ion-col col-4>
+              <div>0</div>
+              <div>红包卡券</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item text-wrap>
+        <div class="user-center-dingdan">
+          <span> 我的订单</span><span style="color:rgba(33,33,33, 0.6)"> 查看所有订单</span>
+        </div>
+        <div style="display:flex; justify-content:space-around">
+          <div class="user-align-item">
+            <ion-icon style="color:rgba(246, 86, 23, 0.9)" name="appstore"></ion-icon>
+            <span>
+              待付款
+            </span>
+          </div>
+          <div class="user-align-item">
+            <ion-icon style="color:rgba(246, 86, 23, 0.9)" name="chatboxes"></ion-icon>
+            <span>
+              待收货
+            </span>
+          </div>
+          <div class="user-align-item">
+            <ion-icon style="color:rgba(246, 86, 23, 0.9)" name="appstore"></ion-icon>
+            <span>
+              评论
+            </span>
+          </div>
+          <div class="user-align-item">
+            <ion-icon style="color:rgba(246, 86, 23, 0.9)" name="logo-yen"></ion-icon>
+            <span>
+              售后
+            </span>
+          </div>
+        </div>
+      </ion-item>
+      <ion-item>
+        <ion-slides>
+          <ion-slide>
+            <ion-grid>
+              <ion-row style="font-size:11px;">
+                <ion-col col-2>
+                  <span>最新物流</span>
+                </ion-col>
+                <ion-col offset-8 col-2>
+                  <span>07-08</span>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  <img style="width:100%;height:30px;" src="../../assets/img/404/404_img1.png" alt="">
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+
+          </ion-slide>
+        </ion-slides>
+      </ion-item>
+    </ion-list>
+  </ng-container>
 </ion-content>
