--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,13 +13,13 @@
   <ion-tab [tabTitle]="myindex.title" tabsHideOnSubPages=true tabIcon="home" [root]="myindex.root">
   </ion-tab>
 
-  <ion-tab [tabTitle]="myNotFound.title" tabIcon="list" [root]="myNotFound.root">
+  <ion-tab [tabTitle]="myNotFound.title" tabsHideOnSubPages=true tabIcon="list" [root]="myNotFound.root">
   </ion-tab>
 
-  <ion-tab [tabTitle]="mycart.title" tabIcon="cart" [root]="mycart.root">
+  <ion-tab [tabTitle]="mycart.title" tabsHideOnSubPages=true tabIcon="cart" [root]="mycart.root">
 
   </ion-tab>
-  <ion-tab [tabTitle]="myUserCenter.title" tabIcon="person" [root]="myUserCenter.root">
+  <ion-tab [tabTitle]="myUserCenter.title" tabsHideOnSubPages=true tabIcon="person" [root]="myUserCenter.root">
 
   </ion-tab>
 </ion-tabs>
