--- a/src/pages/gokey/gokey.html
+++ b/src/pages/gokey/gokey.html
@@ -4,22 +4,77 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-tabs>
-  <ion-tab tabTitle="全部" root="mykey">
-  </ion-tab>
-  <ion-tab tabTitle="代付款" root="mycard">
-  </ion-tab>
-
-  <ion-tab tabTitle="代发货" root="mygofa">
-  </ion-tab>
-
-  <ion-tab tabTitle="带收货" root="myshow">
-
-  </ion-tab>
-  <ion-tab tabTitle="带评论" root="mydetail">
-
-  </ion-tab>
-</ion-tabs>
 <ion-content padding>
+  h2全部
+  <div (click)="myselecttrue()" padding>
+    <ion-segment [(ngModel)]="pet">
+      <ion-segment-button value="gocard">
+        代付款
+      </ion-segment-button>
+      <ion-segment-button value="gofa">
+        代发货
+      </ion-segment-button>
+      <ion-segment-button value="goshow">
+        待收货
+      </ion-segment-button>
+      <ion-segment-button value="godetail">
+        待评论
+      </ion-segment-button>
+    </ion-segment>
+  </div>
 
+  <div [ngSwitch]="pet">
+
+    <ion-list *ngSwitchCase="'gocard'">
+      <ion-item>
+        <ion-thumbnail item-start>
+        </ion-thumbnail>
+        <h2>Luna</h2>
+      </ion-item>
+      ...
+    </ion-list>
+
+    <ion-list *ngSwitchCase="'gofa'">
+      <ion-item>
+        <ion-thumbnail item-start>
+        </ion-thumbnail>
+        <h2>Luna</h2>
+      </ion-item>
+      ...
+    </ion-list>
+
+    <ion-list *ngSwitchCase="'goshow'">
+      <ion-item>
+        <ion-thumbnail item-start>
+        </ion-thumbnail>
+        <h2>Luna</h2>
+      </ion-item>
+      ...
+    </ion-list>
+
+    <ion-list *ngSwitchCase="'godetail'">
+      <ion-item>
+        <ion-thumbnail item-start>
+        </ion-thumbnail>
+        <h2>Luna</h2>
+      </ion-item>
+      ...
+    </ion-list>
+  </div>
 </ion-content>
+<!--<ion-tabs>
+   <ion-tab tabTitle="全部" [root]="mykey">
+        </ion-tab>
+  <ion-tab tabTitle="待付款" [root]="mycard">
+  </ion-tab>
+
+  <ion-tab tabTitle="待发货" [root]="mygofa">
+  </ion-tab>
+
+  <ion-tab tabTitle="待收货" [root]="myshow">
+
+  </ion-tab>
+  <ion-tab tabTitle="待评论" [root]="mydetail">
+
+  </ion-tab>
+</ion-tabs> -->
