--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
   <ion-tab [tabTitle]="mycart.title" tabsHideOnSubPages=true tabIcon="cart" [root]="mycart.root">
 
   </ion-tab>
-  <ion-tab [tabTitle]="myUserCenter.title" tabsHideOnSubPages=true tabIcon="person" [root]="myUserCenter.root">
+  <ion-tab [tabTitle]="myUserCenter.title" tabIcon="person" [root]="myUserCenter.root">
 
   </ion-tab>
 </ion-tabs>
