--- a/src/pages/user-center/user-center.html
+++ b/src/pages/user-center/user-center.html
@@ -19,7 +19,7 @@
     <ion-list>
       <ion-item class="rgba2552553205">
         <ion-avatar style="border:1px solid #fff;border-radius:50%" item-start>
-          <img [src]="'../../assets/'+avatar" alt="">
+          <img [src]="'http://127.0.0.1:8080/'+avatar" alt="">
         </ion-avatar>
         <ion-grid>
           <ion-row>
@@ -102,7 +102,7 @@
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <img style="width:100%;height:30px;" src="../../assets/img/404/404_img1.png" alt="">
+                  <img style="width:100%;height:30px;" src="http:127.0.0.1:8080/sc_user/user1.png" alt="">
                 </ion-col>
               </ion-row>
             </ion-grid>
